--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "packing-template-artTemplate",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "artTemplate  middleware for express",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d dist",
